<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#222222"
    android:paddingLeft="5pt"
    android:paddingRight="5pt"
    android:paddingTop="10pt"
    android:paddingBottom="10pt">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/selectContactButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_add_person"
            android:layout_marginRight="10pt"/>

        <TextView
            android:id="@+id/selectedContactText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noContactSelected"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            android:gravity="end"/>

    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/chooseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_event"
            android:layout_marginRight="10pt"/>

        <TextView
            android:id="@+id/dateAppointement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateFormat"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"
            />
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <ImageButton
            android:id="@+id/chooseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_time"
            android:layout_marginRight="10pt"/>

        <TextView
            android:id="@+id/timeAppointement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dateFormat"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#FFFFFF"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="5pt">

        <EditText
            android:id="@+id/titleField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:textColor="#FFFFFF"
            android:textSize="10pt"/>

        <EditText
            android:id="@+id/descriptionField"
            android:layout_width="match_parent"
            android:layout_height="50pt"
            android:ems="10"
            android:hint="@string/description"
            android:textColor="#FFFFFF"
            android:gravity="top"/>

        <Button
            android:id="@+id/submitNewIntervention"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/add"/>
    </LinearLayout>
</LinearLayout>